--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  main {
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  
+  form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
-}
+  
+  .movies {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   
+    width: 100%;
+    gap: 32px;
+  }
+  
+  .movie {
+    text-align: center;
+  }
+  
+  .movie h3, .movie p {
+    margin: 0;
+  }
+  
+  .movie img {
+    border-radius: 8px;
+    margin-top: 16px;
+  }
