--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,3 +43,100 @@
     border-radius: 8px;
     margin-top: 16px;
   }
+
+  /* Navbar */
+
+  /* Estilos generales del NavBar */
+.navbar {
+  background-color: #333; 
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+}
+
+/* Estilos para el logo o título en el NavBar */
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navbar-brand img {
+  height: 40px;
+  width: auto;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+/* Estilos para los enlaces de navegación */
+.navbar-nav {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 2em;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none; 
+  font-size: 1rem; 
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+.register-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: rgb(136, 149, 225);
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.register-form div {
+  margin-bottom: 10px;
+}
+
+.register-form input[type="text"],
+.register-form input[type="email"],
+.register-form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.register-form button {
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.register-form button:hover {
+  background-color: #0056b3;
+}
+
+
+/* Estilos para el menú responsive (opcional) */
+@media (max-width: 600px) {
+  .navbar-nav {
+    flex-direction: column; /* Los elementos se distribuyen verticalmente */
+    width: 100%; /* Ocupa todo el ancho disponible */
+  }
+
+  .nav-item {
+    margin: 10px 0; /* Espaciado vertical entre elementos */
+  }
+}
